objects/Account.object
<CustomObject>
    <fields>
        <fullName>Structure_Type__c</fullName>
        <label>Structure Type</label>
        <picklist>
            <picklistValues>
                <fullName>All-inclusive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apart - Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bed &amp; Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chalet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condominium resort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cottage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guest House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hostel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel resort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel-unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House boat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overwater Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Vacation Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ranch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryokan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tree house</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Villa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submarket__c</fullName>
        <description>Looks up to the submarket the account belongs to</description>
        <label>Submarket</label>
        <referenceTo>Submarket__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Super_Region__c</fullName>
        <label>Super Region</label>
        <referenceTo>Super_Region__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <description>From PSG Salesforce.  Terms of account</description>
        <label>Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_party_company_name__c</fullName>
        <description>Value come from PSG Salesforce.</description>
        <label>Third Party Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <label>Vendor Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Id__c</fullName>
        <description>Contains the Vendor Id for a property</description>
        <label>Vendor Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venere_Commission__c</fullName>
        <label>Venere Commission %</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Venere_Contract_Status__c</fullName>
        <description>Status of the venere contracting process</description>
        <label>Venere Contract Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Deactivated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Reactivated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent affiliation email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent affiliation email to a properties group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venere_EEM_Availability_Policy__c</fullName>
        <label>Venere/EEM Availability Policy</label>
        <picklist>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IB - instant booking policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR - on request policy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venere_EEM_Hotel_Login__c</fullName>
        <label>Venere/EEM Hotel Login</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Venere_EEM_Last_Contract_Signed_Date__c</fullName>
        <label>Venere/EEM Last Contract Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Venere_Hotel_Email__c</fullName>
        <label>Venere Hotel Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Venere_Id__c</fullName>
        <description>Unique id for Venere property</description>
        <externalId>true</externalId>
        <label>Venere Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venere_Last_Activation_Date__c</fullName>
        <label>Venere Last Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Venere_Last_Date_Inventory__c</fullName>
        <label>Venere Last Date Inventory</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Venere_Page_Status__c</fullName>
        <description>From PSG Salesforce.</description>
        <label>Venere Page Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venere_Status__c</fullName>
        <description>Status of the Venere property</description>
        <label>Venere Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venere_Structure_Type__c</fullName>
        <description>Structure type for Venere property</description>
        <label>Venere Structure Type</label>
        <referenceTo>Structure_Type__c</referenceTo>
        <relationshipLabel>Accounts (Venere Structure Type)</relationshipLabel>
        <relationshipName>Venere_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>View_on_Expedia__c</fullName>
        <label>View on Expedia</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Bed_bank_representation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wholesaler/Bed bank representation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inserted__c</fullName>
        <label>Venere Page Status</label>
        <picklist>
            <picklistValues>
                <fullName>inserted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>inprogress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>made</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>to train</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>trained</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>of_Accounts__c</fullName>
        <description>Used in summary reporting to get the unique number of accounts, when there may be multiple rows of the same account.

See also: http://success.salesforce.com/ideaView?c=09a30000000D9xo&amp;id=087300000006tdeAAA</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>Connectivity_Vendors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Expedia_Hotel_Id__c</columns>
        <columns>External_Account_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Connectivity_Vendor</value>
        </filters>
        <label>Connectivity Vendors</label>
    </listViews>
    <listViews>
        <fullName>Destination_Services</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Super_Region__c</columns>
        <columns>Region__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Market_Manager_Name__c</columns>
        <columns>Market_Manager_Phone__c</columns>
        <columns>Market_Manager_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Destination_Services</value>
        </filters>
        <label>Destination Services</label>
    </listViews>
    <listViews>
        <fullName>Hotels</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Expedia_Hotel_Id__c</columns>
        <columns>External_Account_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Hotel</value>
        </filters>
        <label>Hotels</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <namedFilters>
        <fullName>nf_01IM00000000FFZMA2_00NM0000000H8NGMA0</fullName>
        <active>true</active>
        <errorMessage>No hotel records matching your search were found.</errorMessage>
        <field>Guest__c.Alternate_Hotel_Contact__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Hotel</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Guest_Suggested Hotel Contact</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IM00000000FFZMA2_00NM0000000H8NHMA0</fullName>
        <active>true</active>
        <errorMessage>No hotel records matching your search were found.</errorMessage>
        <field>Guest__c.Alternate_Vendor__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Hotel</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Guest_Suggested Hotel</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IM00000000FFZMA2_00NM0000000H8NnMAK</fullName>
        <active>true</active>
        <errorMessage>No hotel records matching your search were found</errorMessage>
        <field>Guest__c.New_Vendor__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Hotel</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Guest_New Hotel</name>
    </namedFilters>
    <recordTypes>
        <fullName>Air</fullName>
        <active>true</active>
        <label>Air</label>
    </recordTypes>
    <recordTypes>
        <fullName>Car</fullName>
        <active>true</active>
        <label>Car</label>
    </recordTypes>
    <recordTypes>
        <fullName>Connectivity_Vendor</fullName>
        <active>true</active>
        <description>Connectivity Vendors</description>
        <label>Connectivity Vendor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Destination_Services</fullName>
        <active>true</active>
        <description>Represents a destination services vendor</description>
        <label>Destination Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>External_Contact</fullName>
        <active>true</active>
        <description>Record Type for 1:1 account id on contacts so searching works</description>
        <label>External Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Health_Safety</fullName>
        <active>true</active>
        <label>Health &amp; Safety</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hotel</fullName>
        <active>true</active>
        <description>Represents a hotel or property on an Expedia Inc point of sale</description>
        <label>Hotel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Contact</fullName>
        <active>true</active>
        <description>Internal Contacts map to this for the 1:1 contact lookup</description>
        <label>Internal Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lodging_Operations_PAC</fullName>
        <active>true</active>
        <label>Lodging Operations - PAC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transportation</fullName>
        <active>true</active>
        <description>Represents a transportation vendor</description>
        <label>Transportation</label>
    </recordTypes>
</CustomObject>